force-app/main/default/objects/BMCServiceDesk__DiscoveryMapping__c/BMCServiceDesk__DiscoveryMapping__c.object-meta.xml
<CustomObject>
    <description>Stores the mapping of Base Element and BMC Client Management fields.</description>
    <label>Discovery Mapping</label>
    <nameField>
        <displayFormat>Mapping-{0}</displayFormat>
        <label>DiscoveryMapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discovery Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>