force-app/main/default/objects/BMCServiceDesk__DiscoveryMapping__c/fields/BMCServiceDesk__BaseElementField__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__BaseElementField__c</fullName>
    <description>Field of Base Element object to which data will be stored.</description>
    <inlineHelpText>Field of Base Element object to which data will be stored.</inlineHelpText>
    <label>Base Element Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>