force-app/main/default/objects/BMCServiceDesk__DiscoveryMapping__c/fields/BMCServiceDesk__DiscoveredDataField__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DiscoveredDataField__c</fullName>
    <description>Field of the discovered object from which data is being imported.</description>
    <inlineHelpText>Field of the discovered object from which data is being imported.</inlineHelpText>
    <label>Discovered Data Field</label>
    <type>TextArea</type>
</CustomField>