force-app/main/default/objects/BMCServiceDesk__DiscoveryMapping__c/fields/BMCServiceDesk__FKCMDBClass__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKCMDBClass__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of CMDB class of mapped field.</description>
    <inlineHelpText>Id of CMDB class of mapped field.</inlineHelpText>
    <label>CMDB Class</label>
    <referenceTo>BMCServiceDesk__CMDB_Class__c</referenceTo>
    <relationshipName>DiscoveryMappings</relationshipName>
    <type>Lookup</type>
</CustomField>