force-app/main/default/objects/BMCServiceDesk__DiscoveryMapping__c/fields/BMCServiceDesk__IsEnabled__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__IsEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If CMDB class is selected for data import.</description>
    <inlineHelpText>If CMDB class is selected for data import.</inlineHelpText>
    <label>IsEnabled</label>
    <type>Checkbox</type>
</CustomField>