force-app/main/default/objects/BMCServiceDesk__DiscoveryMapping__c/fields/BMCServiceDesk__LastImport__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__LastImport__c</fullName>
    <description>Specifies date and time of last successful discovered devices import</description>
    <label>Last Import</label>
    <type>DateTime</type>
</CustomField>